DevOrg/src/objects/Payable__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Due to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payables</relationshipLabel>
        <relationshipName>Payables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Amount_Due__c</fullName>
        <formula>Amount_Due__c - Bill_Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Amount_Paid__c</fullName>
        <description>Bill Amount Paid is roll up on Details Transaction_Line_Debit__c</description>
        <label>Amount Paid</label>
        <summarizedField>Transaction_Line_Debit__c.Amount__c</summarizedField>
        <summaryForeignKey>Transaction_Line_Debit__c.Payable__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payables</relationshipLabel>
        <relationshipName>Payables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Amount_Used__c</fullName>
        <label>Deal Amount Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsCreatedFromGrid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The check-box will identify if payable s are created from Opportunity Grid.</description>
        <label>IsCreatedFromGrid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payables</relationshipLabel>
        <relationshipName>Payables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payable_Date__c</fullName>
        <label>Payable Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payback_Funded__c</fullName>
        <label>Percentage of</label>
        <picklist>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Funded Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Origination Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Revenue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payee_Type__c</fullName>
        <label>Payee Type</label>
        <picklist>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Receivable_Dependency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receivable Dependency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Receivable__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Receivable__c</referenceTo>
        <relationshipLabel>Payables</relationshipLabel>
        <relationshipName>Payables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open - Ready to Pay</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Needs Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid - Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Clarification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bonus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Provider Pmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Origination Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing Residual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syndication Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wizard_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Check if Payable has gone through Wizard process</description>
        <label>Wizard Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Payable</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bill_Amount_Due__c</columns>
        <columns>Bill_Amount_Paid__c</columns>
        <columns>Amount_Due__c</columns>
        <columns>Opportunity__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_A_P</fullName>
        <columns>NAME</columns>
        <columns>Amount_Due__c</columns>
        <columns>Bill_Amount_Paid__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Payable_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Cancelled</value>
        </filters>
        <label>Open A/P</label>
    </listViews>
    <nameField>
        <displayFormat>PAYB-{00000}</displayFormat>
        <label>Payable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payables</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>AmtPaidLessThanAmt</fullName>
        <active>false</active>
        <description>Amount paid cannot exceed Amount.Please check the balance.</description>
        <errorConditionFormula>Bill_Amount_Paid__c &gt;   Amount_Due__c</errorConditionFormula>
        <errorDisplayField>Amount_Due__c</errorDisplayField>
        <errorMessage>Amount paid cannot exceed Amount.Please check the balance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PayableValidateAmountDue</fullName>
        <active>true</active>
        <errorConditionFormula>IF (AND(ISBLANK(TEXT( Payback_Funded__c )),ISNULL(Percentage__c)),FALSE,
	IF(ISBLANK(TEXT( Payback_Funded__c )),
		IF((Amount_Due__c)!=0,TRUE,FALSE),
		IF(ISNULL(Percentage__c),
		IF((Amount_Due__c)!=0,TRUE,FALSE),
			IF((Percentage__c  * Deal_Amount_Used__c  ) != Amount_Due__c,TRUE,FALSE)
		)
	)
)</errorConditionFormula>
        <errorDisplayField>Amount_Due__c</errorDisplayField>
        <errorMessage>The Amount does not match the calculation of Percentage % and Percentage Of.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StatusCannotBePaidError</fullName>
        <active>true</active>
        <description>Status cannot be PAID Error</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &apos;Paid&apos;) &amp;&amp;  Bill_Amount_Due__c != 0</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status cannot be Paid if the Amount Due not equal to 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StatusCannotBePaidPartial</fullName>
        <active>true</active>
        <description>Status cannot equal Paid - Partial if Amount Paid = 0 OR Amount Due = 0</description>
        <errorConditionFormula>ISPICKVAL( Status__c ,&apos;Paid - Partial&apos;) &amp;&amp;  (Bill_Amount_Paid__c == 0 ||  Bill_Amount_Due__c == 0)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status cannot equal Paid - Partial if Amount Paid = 0 OR Amount Due = 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Amount_Due__c =12</errorConditionFormula>
        <errorDisplayField>Amount_Due__c</errorDisplayField>
        <errorMessage>This is Test Validation Rule</errorMessage>
    </validationRules>
</CustomObject>